--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,25 @@
 language: android
+android:
+  components:
+    - tools
+    - platform-tools
+    - tools
+    - add-on
+    - extra
 
-jdk:
-  - oraclejdk8
+    # The BuildTools version used by your project
+    - build-tools-25.0.0
 
-install:
-  - echo yes | sdkmanager "tools" &>/dev/null
-  - echo yes | sdkmanager "platform-tools" &>/dev/null
-  - echo yes | sdkmanager "build-tools;26.0.2" &>/dev/null
-  - echo yes | sdkmanager "platforms;android-26" &>/dev/null
-
+    # The SDK version used to compile your project
+    - android-25
+    
 script:
   - cd app/
-  - ./gradlew clean build
-
-sudo: false
-
+  - gradle clean build
+    
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
 cache:
   directories:
     - $HOME/.gradle/caches/
