--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,15 @@ android:
     - extra
 
     # The BuildTools version used by your project
-    - build-tools-25.0.0
+    - build-tools-27.0.3
 
     # The SDK version used to compile your project
-    - android-25
+    - android-26
     
 script:
   - cd app/
-  - gradle clean build
+  - chmod a+x ./gradlew
+  - ./gradlew clean build
     
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
