--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: android
+addons:
+  sonarcloud:
+    organization: infinitefuture-github
+    token:
+      secure: 0246e1f23ac1e7b782a4b1acc5aae9bf0d7ccf1d
 android:
   components:
     - tools
@@ -16,7 +21,7 @@ android:
 script:
   - cd app/
   - chmod a+x ./gradlew
-  - ./gradlew clean build
+  - ./gradlew clean build sonarqube
     
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
