--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.sonarqube" version "2.6"
+}
+
 allprojects {
     repositories {
         google()
@@ -27,6 +31,13 @@ allprojects {
 }
 
 apply plugin: "org.sonarqube"
+
+sonarqube {
+    properties {
+        property "sonar.projectName", "SmartClothes"
+        property "sonar.projectKey", "SmartClothes"
+    }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
